7034957: acquiring lock CodeCache_lock/1 out of order with lock tty_lock/0 -- possible deadlock

Reviewed-by: iveresov